<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="#F1F0EF"
=======

>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView3"
<<<<<<< HEAD
        android:layout_width="410dp"
        android:layout_height="95dp"
        android:layout_marginBottom="436dp"
=======
        android:layout_width="421dp"
        android:layout_height="93dp"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="-1dp"
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
<<<<<<< HEAD
        app:srcCompat="@drawable/iphone_12_pro_max__1" />
=======
        app:srcCompat="@drawable/encabezado3" />
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:textSize="20dp"
<<<<<<< HEAD
=======
        android:textColor="@color/white"
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
<<<<<<< HEAD
                android:text="Formulario de registro"
=======
                android:textSize="20dp"
                android:text="Formulario de registro"
                android:layout_gravity="center_horizontal"
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_NombreUsuario"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_nombre"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombreUsuario" />

            <EditText
                android:id="@+id/editTextApellido"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_apellido"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

            <EditText
                android:id="@+id/editTextCedula"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_cédula"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_teléfono"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCedula" />

            <EditText
                android:id="@+id/editCelular"
                android:layout_width="match_parent"
                android:layout_height="35dp"
<<<<<<< HEAD

=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_celular"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTelefono" />

            <EditText
                android:id="@+id/editDireccion"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_dirección"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCelular" />

            <EditText
                android:id="@+id/editContraseña"
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="9"
                android:background="@drawable/new_style"
                android:ems="10"
                android:hint="@string/registro_contraseña"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDireccion" />

<<<<<<< HEAD
            <Spinner
                android:id="@+id/idSpinnerRoles"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/new_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"></Spinner>
=======
            <Button
                android:id="@+id/btnSelectRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="seleccionar rol"
                android:background="@drawable/new_style"></Button>
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terminos_condiciones"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"></CheckBox>

            <Button
<<<<<<< HEAD
                android:id="@+id/btnSelectRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="seleccionar rol"></Button>

            <Button
=======
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:id="@+id/finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
<<<<<<< HEAD

                android:background="@drawable/new_button"
                android:onClick="modulos"
                android:text="@string/registro_finalizar"
=======
                android:background="@drawable/new_button"
                android:onClick="modulos"
                android:text="@string/registro_finalizar"
                android:textColor="@color/white"
>>>>>>> 1233e6a9570f33162e38f0bf3a8bff02305e17dd
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

